--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,9 +5,9 @@ $font-primary: 'Poppins',Arial, sans-serif;
 
 $white: #fff;
 $black: #000000;
-$darken: #232931;
+$darken: #031a36;
 
-$primary: #3e64ff;
+$primary: #01040f;
 $secondary: #a0f669;
 
 
