--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,10 +19,17 @@ common-js:
   - "/assets/js/beautifuljekyll.js"
 ---
 
+
+
 <!DOCTYPE html>
 <html lang="{{ page.language | default: site.language | default: 'en' }}">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poly:ital@0;1&display=swap" rel="stylesheet">
 <!-- Beautiful Jekyll 5.0.0 | Copyright Dean Attali 2020 -->
 {% include head.html %}
+
 
 <body>
 
