--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family:  "Sura", serif;
+  font-family:  "Poly", serif;
   font-size: 1.125rem;
   color: {{ site.text-col | default: "#404040" }};
   position: relative;
